document sent to teacher

--- a/report/report.tex
+++ b/report/report.tex
@@ -278,7 +278,7 @@ Critères:
 	\end{itemize}
 	\item \textit{-ctime}: \underline{[+-]time[md]}
 	\begin{itemize}
-		\item 	Le statu du fichier fut changé depuis \underline{time}. 
+		\item 	Le statut du fichier fut changé depuis \underline{time}. 
 		\item Pour plus détails, voir l'explication pour le critère \underline{-atime}
 	\end{itemize}
 	\item \textit{-mtime}: \underline{[+-]time[md]}
