--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -10,6 +10,7 @@ finder
   - realloc when needed instead of 1000000 files(NO)
   - create link each time a new file is find?
   - cleanup  finder_find_in_dir
+  - split finder_find_in_dir into diferent functions
 
 GLOBAL:
   - set create permissions globally (UMASK?) for all file/dir creation
