--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -40,6 +40,7 @@ Modules to implement:
 Implementation doc:
   - Describe singleton IPC
   - Describe callback/args
+  - create doxigen doc
 
 Logger:
  - replace all err and log message to calls to this configurable module
