--- a/report/TODO.txt
+++ b/report/TODO.txt
@@ -4,3 +4,12 @@ architecture document fixes:
  - time postfix unity also accepts seconds and hours ([dmhs])
  - time postfix is optional (seconds by default)
  - time postfix is case insensitive
+
+IMplementattion doc:
+ - tester doxygen
+ - max  100000 files output
+ -  unit test
+  - Describe singleton IPC
+  - Describe callback/args
+  - describe bitwise operations
+
