Add flow diagram (TODO: text)

--- a/report/report.tex
+++ b/report/report.tex
@@ -195,6 +195,23 @@ Ce module centralise l'affichage des logs de débogage.
 \newpage
 
 % -----------------------------------------------------------------------------
+\subsection{Flux général d'exécution}
+
+Le diagramme ci-dessous décrit le flux général de l'application:
+
+\begin{figure}[H]
+    \begin{center}
+        \includegraphics[width=0.8\textwidth]{flow.png}
+    \end{center}
+    \caption{Flow général d'exécution}
+    \label{Flow général d'exécution}
+\end{figure}
+
+
+
+\newpage
+
+% -----------------------------------------------------------------------------
 \section{Annexe}
 \subsection{Expression}
 \label{ann_exp}
@@ -340,6 +357,7 @@ La liste ci-dessous décrit l'ensemble des changements apportés à ce document 
     \begin{itemize}
         \item SmartFolder: renommé en SearchFolder.
     \end{itemize}
+    \item ajout d'une section \textit{Flux général d'exécution};
 \end{itemize}
 
 \end{document}
