Flow text + implementation text

--- a/report/report.tex
+++ b/report/report.tex
@@ -207,7 +207,40 @@ Le diagramme ci-dessous décrit le flux général de l'application:
     \label{Flow général d'exécution}
 \end{figure}
 
+L'application commence par décoder les 2 premiers arguments pour savoir dans quel mode il doit être exécuté. \\
 
+En mode \textit{recherche}, il commence par se mettre en arrière-plan.
+Puis, il donne le reste des argument au Parser d'expression pour la validation des fichiers.
+Ensuite, il écrit son PID dans le fichier et crée le dossier de destination donnée en argument pour pouvoir commencer la recherche. \\
+
+La recherche tourne indéfiniment tant qu'un signal d'arrêt (SIGTERM ou SIGINT) n'est pas reçu.
+Cette recherche commence par parcourir récursivement l'ensemble des fichiers dans le dossier de recherche donnée en argument.
+Puis, avec cette liste, le programme met à jour les liens dans le dossier de destination en commençant par purger
+les liens qui ne figurent plus dans la liste, puis crée ceux qui y sont nouveaux.
+La recherche se termine par une attente de quelques secondes et recommence. \\
+
+En mode \textit{stop}, se contente de lire le PID dans le fichier créé par l'instance cible et
+lui envoie un signal de terminaison (SIGTERM).
+Ceci provoque l'exécution d'un \textit{handler} sur l'instance concernée qui place un indicateur
+pour que la boucle de recherche s'arrête.
+
+\newpage
+
+% -----------------------------------------------------------------------------
+\section{Implémentation}
+
+La documentation d'implémentation a été générée à l'aide de \href{http://www.doxygen.org/index.html}{Doxygen} en version HTML et se trouve à l'addresse:
+\url{https://hepia-projects.gitlab.io/smart-folder/}. \\
+
+Tous les modules possèdent une description complète en début de fichier.
+Toutes les fonctions publiques ont été documentées dans le fichier d'header,
+alors que les fonctions privées ont été documentées dans le fichier d'implémentation. \\
+
+Le diagramme de modules (figure \ref{Architecture du SmartFolder}) donne toutes les fonctions publiques de chaque module.
+
+\subsection{Testes unitaires}
+
+Le module \textit{Parser} a été entièrement tester à l'aide de \href{http://cutest.sourceforge.net/}{CuTest}.
 
 \newpage
 
@@ -358,6 +391,7 @@ La liste ci-dessous décrit l'ensemble des changements apportés à ce document 
         \item SmartFolder: renommé en SearchFolder.
     \end{itemize}
     \item ajout d'une section \textit{Flux général d'exécution};
+    \item ajout d'une section \textit{implémentation};
 \end{itemize}
 
 \end{document}
