--- a/report/report.tex
+++ b/report/report.tex
@@ -30,7 +30,7 @@
 \chead{SmartFolder}
 \rhead{Claudio Sousa - David Gonzalez}
 \renewcommand{\footrulewidth}{0.5pt}
-\lfoot{22 décembre 2016}
+\lfoot{26 janvier 2017}
 \cfoot{}
 \rfoot{Page \thepage /\pageref{LastPage}}
 
@@ -49,7 +49,7 @@
 {
     \LARGE{David Gonzalez - Claudio Sousa}
 }
-\date{22 décembre 2016}
+\date{26 janvier 2017}
 \maketitle
 
 \begin{center}
