--- a/report/report.tex
+++ b/report/report.tex
@@ -27,7 +27,7 @@
 \setlength{\headheight}{33pt}
 \renewcommand{\headrulewidth}{0.5pt}
 \lhead{\includegraphics[height=1cm]{hepia.jpg}}
-\chead{SmartFolder}
+\chead{SearchFolder}
 \rhead{Claudio Sousa - David Gonzalez}
 \renewcommand{\footrulewidth}{0.5pt}
 \lfoot{26 janvier 2017}
@@ -43,7 +43,7 @@
 \title
 {
     \Huge{Programmation système} \\
-    \Huge{SmartFolder}
+    \Huge{SearchFolder}
 }
 \author
 {
